# gscite

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  bacon.toml  flake.nix
examples/: query.rs
samples/: cite_response.html  query_response.html
src/: error.rs  lib.rs
